Initial framework changes

--- a/workflows/.env.example
+++ b/workflows/.env.example
@@ -1,2 +1,81 @@
-# We support all langchain models, openai only for demo purposes
-OPENAI_API_KEY=
+# Workflow Use Environment Configuration
+#
+# Copy this file to .env and fill in your configuration values
+#
+
+# =============================================================================
+# LLM Provider Configuration
+# =============================================================================
+
+# LLM Provider Selection
+# Options: "openai", "bedrock", "anthropic", "google"
+LLM_PROVIDER=openai
+
+# Model Configuration
+LLM_MODEL=gpt-4o
+LLM_TEMPERATURE=0.0
+# LLM_MAX_TOKENS=4096
+
+# =============================================================================
+# OpenAI Configuration
+# =============================================================================
+
+# OpenAI API Key (required for OpenAI provider)
+OPENAI_API_KEY=your-openai-api-key-here
+
+# =============================================================================
+# AWS Bedrock Configuration
+# =============================================================================
+
+# AWS Profile (required for Bedrock provider)
+# This should match a profile in your ~/.aws/credentials file
+AWS_PROFILE=default
+
+# AWS Region
+AWS_REGION=us-west-2
+
+# Bedrock Model ID (required for Bedrock provider)
+# Examples:
+# - anthropic.claude-3-5-sonnet-20241022-v2:0
+# - anthropic.claude-3-haiku-20240307-v1:0
+# - amazon.titan-text-express-v1
+BEDROCK_MODEL_ID=anthropic.claude-3-5-sonnet-20241022-v2:0
+
+# =============================================================================
+# Anthropic Configuration
+# =============================================================================
+
+# Anthropic API Key (required for Anthropic provider)
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+
+# =============================================================================
+# Google Configuration
+# =============================================================================
+
+# Google API Key (required for Google provider)
+GOOGLE_API_KEY=your-google-api-key-here
+
+# =============================================================================
+# Browser Configuration
+# =============================================================================
+
+# Browser settings for workflow execution
+BROWSER_HEADLESS=false
+BROWSER_TIMEOUT=30000
+
+# =============================================================================
+# Logging Configuration
+# =============================================================================
+
+# Logging level (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
+
+# =============================================================================
+# Development Configuration
+# =============================================================================
+
+# Enable development mode features
+DEV_MODE=false
+
+# Workflow storage directory
+WORKFLOW_DIR=./tmp
