--- a/workflows/.env.example
+++ b/workflows/.env.example
@@ -63,6 +63,11 @@ GOOGLE_API_KEY=your-google-api-key-here
 BROWSER_HEADLESS=false
 BROWSER_TIMEOUT=30000
 
+# Maximum number of steps for browser-use agent execution
+# Increase this value if your tests require more than 100 steps
+# Default: 100 (was previously hardcoded to 50)
+BROWSER_USE_MAX_STEPS=100
+
 # =============================================================================
 # Logging Configuration
 # =============================================================================
